--- a/luci-app-openclash/luasrc/view/openclash/status.htm
+++ b/luci-app-openclash/luasrc/view/openclash/status.htm
@@ -1,6 +1,143 @@
 <head>
 <style>
-.arrow-down{cursor:pointer;display:inline-block;width:0;height:0;border-style:solid;border-width:10px;border-color:#417ab4 #fff0 #fff0 #fff0}.radio-button{display:none;white-space:nowrap;background-color:#547185;border-radius:4px}.radio-button input[type="radio"]{display:none}.radio-button label{display:inline-block;font-size:12px;padding:2px 3px;color:#fff;cursor:pointer;border-radius:4px}.radio-button input[type="radio"]:checked+label{background-color:#006786}
+.arrow-down{
+	display:inline-block;
+	width:0px;
+	height:0px;
+	border-style:solid;
+	border-width:10px;
+	border-color: rgb(65 122 180) transparent transparent transparent;
+}
+
+.radio-button{
+	display: none;
+	white-space: nowrap;
+	background-image: linear-gradient(to right, #06101f, #003c54, #006d69, #139b51, #afbe1a);
+	border-radius: 4px;
+}
+.text1 {
+      writing-mode:tb-rl;
+    -webkit-transform:rotate(-90deg);
+    -moz-transform:rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    -ms-transform:rotate(-90deg);
+    transform: rotate(180deg);
+    white-space:nowrap;
+    float:left;
+    }
+.radio-button input[type="radio"] {
+	display: none;
+}
+.tulis {
+background: linear-gradient(
+    to right, 
+    #A6CE37, #ECE71C, #0FC6E6, #F95D44, #816271, #9F1958, #081B6A, #59D7EE);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 800px;
+  background-position: center 0%;
+  animation: rainbow_animation 6s ease-in-out infinite;
+    background-size: 400% 100%;
+    font-size: 10px;
+}
+@keyframes rainbow_animation {
+    0%,100% {
+        background-position: 0 0;
+    }
+
+    50% {
+        background-position: 100% 0;
+    }
+}
+.radio-button label {
+	display: inline-block;
+	font-size: 11px;
+	padding: 2px 3px;
+	color: #fff;
+	cursor: pointer;
+	border-radius: 2px;
+	text-shadow: 2px 2px 4px black;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.radio-button input[type="radio"]:checked+label {
+	background-image: linear-gradient(to right bottom, #71413f, #764447, #7b474f, #804a58, #834e61, #8b556c, #925c78, #996484, #a67195, #b37ea7, #c08bb9, #cc99cc);
+	color: yellow;
+	font-weight: bold;
+	text-shadow: 2px 2px 3px black;
+	font-size: 10px;
+	font-family: "Times New Roman", Times, serif;
+}
+.r {
+	background-image: linear-gradient(to right bottom, #71413f, #764447, #7b474f, #804a58, #834e61, #8b556c, #925c78, #996484, #a67195, #b37ea7, #c08bb9, #cc99cc);
+	color: yellow;
+	font-weight: bold;
+	text-shadow: 2px 2px 3px black;
+	font-size: 10px;
+	font-family: "Times New Roman", Times, serif;
+}
+.blink_me {
+  animation: blinker 2s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+.status {
+clear:both;
+#padding:5px 5px 5px 5px;
+#margin-bottom:4px;
+#font-size: 19px;
+#background-color: black;
+border: 3px solid rgb(63,94,251);
+border-radius: 9px;
+#background-image: url('/luci-static/resources/openclash/img/backgroundfanspage.png');
+ #background-size: cover;
+  #background-repeat: no-repeat;
+}
+.status span{
+font-weight: bold;
+color:gold;
+font-size: 8px;
+margin-bottom: 5px;
+}
+table {
+#color: cyan;
+#background-image: url('/luci-static/resources/openclash/img/backgroundfanspage.png');
+  #background-size: cover;
+  #background-repeat: no-repeat;
+border: 3px solid #5DD6F3;
+#border-radius: 10px;
+}
+.lok{
+color:cyan;
+}
+.lok2{
+color:gold;
+}
+td{
+color:cyan;
+border: 2px solid #5DD6F3;
+#background-color: black;
+}
+tr{
+color:cyan;
+border: 2px solid #5DD6F3;
+#background-color: black;
+}
+.fstatus {
+clear:both;
+padding:5px 5px 5px 5px;
+#margin-bottom:4px;
+#font-size: 12px;
+border: 3px solid gold;
+border-radius: 5px;
+#background-color: black;
+font-family: "Times New Roman", Times, serif;
+}
 </style>
 <style>#flag{display:flex;justify-content:center;align-items:center;height:150px}#flag img{max-width:100%;max-height:100%;width:auto;height:auto}</style>
 </head>
@@ -9,8 +146,9 @@
 	local RELEASE_BRANCH = uci:get("openclash", "config", "release_branch")
 	local random = tostring(os.time()):reverse():sub(1, 9)
 %>
-<fieldset class="cbi-section">
-	<table width="100%">
+<fieldset class="status">
+							<legend class="fstatus" style="font-size:18px" align="center"><marquee scrollamount="3"><font color="cyan"><i>OPENCLASH REMOD BY HOUJIE<i></font></marquee></legend>
+	<table>
 	    <tr>
 	  	<td colspan="4" width="100%">
 	  		<p style="margin: 10px 0; text-align: center">
@@ -72,7 +210,23 @@
 				<input type="radio" id="direct" name="radios" value="direct" onclick="return switch_rule_mode(this.value)"/>
 				<label for="direct"><%:Direct%></label>
 				</span></td><td width="25%"><%:Control Panel Login Secret%></td><td width="25%" align="left" id="_dase"><%:Collecting data...%></td></tr>
-		<tr><td colspan="4"><div style="margin: 10px 0; text-align: center"><span id="_web" style="width: 33%; display: inline-block;"></span><span id="_webm" style="width: 33%; display: inline-block;"><%:Collecting data...%></span><span id="_webo" style="width: 33%; display: inline-block;"></span></div></td></tr>
+		<tr><td width="100%" style=color:cyan>
+	  	   <span align="center" id="_zash">
+	  		   <%:Collecting data...%>
+	  	   </span></td>
+	  	   <td width="100%" style=color:cyan>
+	  	   <span align="center" id="_webm">
+	  		   <%:Collecting data...%>
+	  	   </span></td>
+	  	   <td width="100%" style=color:cyan>
+	  	   <span align="center" id="_webo">
+	  		   <%:Collecting data...%>
+	  	   </span>
+	  	   	<td width="100%" style=color:cyan>
+	  	   <span align="center" id="_web">
+	  		   <%:Collecting data...%>
+	  	   </span>
+	    </td></tr>
 		<tr id="tool_label2"><td colspan="4">
 			<div style="margin: 10px 0; text-align: center">
 <span>
@@ -180,6 +334,7 @@
 	var web = document.getElementById('_web');
 	var webo = document.getElementById('_webo');
 	var webm = document.getElementById('_webm');
+	var zash = document.getElementById('_zash');
 	var watchdog = document.getElementById('_watchdog');
 	var daip = document.getElementById('_daip');
 	var dase = document.getElementById('_dase');
@@ -222,6 +377,7 @@
 	var luci_protocol;
 	var ws_t;
 	var ws_c;
+	var ws_m;
 	var state_refresh;
 	var s;
 	var gr;
@@ -236,9 +392,10 @@
 			clash.innerHTML = status.clash ? '<b style=color:green>' + status.core_type +'&nbsp;&nbsp;&nbsp;<%:Running%></b>' : '<b style=color:red><%:Not Running%></b>';
 			watchdog.innerHTML = status.watchdog ? '&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<%:Daemons%>:&nbsp;&nbsp;&nbsp;<b style=color:green><%:Running%></b>' : '&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<%:Daemons%>:&nbsp;&nbsp;&nbsp;<b style=color:red><%:Not Running%></b>';
 			dase.innerHTML = status.dase ? "<b style=color:green>"+status.dase+"</b>" : "<b style=color:red>"+"<%:Not Set%>"+"</b>";
-			web.innerHTML = status.web ? '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:YACD PANEL%>" onclick="return ycad_dashboard(this)"/>' : '<b style=color:red><%:Not Running%></b>';
-			webo.innerHTML = status.web ? '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:DASHBOARD%>" onclick="return net_dashboard(this)"/>' : '<b style=color:red><%:Not Running%></b>';
-			webm.innerHTML = status.web ? '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:METACUBEXD%>" onclick="return meta_dashboard(this)"/>' : '<b style=color:red><%:Not Running%></b>';
+			web.innerHTML = status.web ? '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Yacd%>" onclick="return ycad_dashboard(this)"/>' : '<b style=color:red><%:Not Running%></b>';
+			webo.innerHTML = status.web ? '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Dashboard%>" onclick="return net_dashboard(this)"/>' : '<b style=color:red><%:Not Running%></b>';
+			webm.innerHTML = status.web ? '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Metacubex%>" onclick="return meta_dashboard(this)"/>' : '<b style=color:red><%:Not Running%></b>';
+            zash.innerHTML = status.web ? '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:zashboard%>" onclick="return zashboard_dashboard(this)"/>' : '<b style=color:red><%:Not Running%></b>';
 			close_all_connection.innerHTML = status.clash ? '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Close All Connections%>" onclick="return b_close_all_connection(this)"/>' : '<b style=color:red><%:Not Running%></b>';
 			reload_firewall.innerHTML = status.clash ? '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Reload Firewall Rules%>" onclick="return b_reload_firewall(this)"/>' : '<b style=color:red><%:Not Running%></b>';
 			flush_fakeip_cache.innerHTML = status.clash ? '<input type="button" class="btn cbi-button cbi-button-reload" value="<%:Flush Fake-IP Cache%>" onclick="return b_flush_fakeip_cache(this)"/>' : '<b style=color:red><%:Not Running%></b>';
@@ -282,10 +439,15 @@
 			};
 			
 			function ws_open() {
+				if (ws_t) {ws_t.close();}
+				if (ws_c) {ws_c.close();}
+				if (ws_m) {ws_m.close();}
 				ws_t = new WebSocket(luci_protocol+"/traffic?token="+status.dase);
 				ws_c = new WebSocket(luci_protocol+"/connections?token="+status.dase);
+				ws_m = new WebSocket(luci_protocol+"/memory?token="+status.dase);
 				ws_t.onmessage = ws_tmessage;
 				ws_c.onmessage = ws_cmessage;
+				ws_m.onmessage = ws_mmessage;
 				ws_t.onerror = ws_terror;
 				ws_t.onopen = function (event) {
 					ws_connect = true;
@@ -599,7 +761,6 @@
 	function show_sys() {
 		XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "toolbar_show_sys")%>', null, function(x, status) {
 			if (x && x.status == 200 && x.responseText != "") {
-				document.getElementById("mem_t").innerHTML = "<font style=\"color:green\">"+status.mem+"</font>";
 				if (status.cpu <= 50) {
 					document.getElementById("cpu_t").innerHTML = "<font style=\"color:green\">"+status.cpu+" %</font>";
 				}
@@ -614,7 +775,6 @@
 				}
 			}
 			else {
-				document.getElementById("mem_t").innerHTML = "<font style=\"color:green\">0 KB</font>";
 				document.getElementById("cpu_t").innerHTML = "<font style=\"color:green\">0 %</font>";
 			}
 		});
@@ -655,6 +815,16 @@
 		}
 		else {
 			document.getElementById("connect_t").innerHTML = "<font style=\"color:green\">0</font>";
+		}
+	};
+
+	function ws_mmessage(event) {
+		var data = JSON.parse(event.data)
+		if (data.inuse) {
+			document.getElementById("mem_t").innerHTML = "<font style=\"color:green\">"+bytesToSize(data.inuse)+"</font>";
+		}
+		else {
+			document.getElementById("mem_t").innerHTML = "<font style=\"color:green\">0 KB</font>";
 		}
 		show_sys();
 	};
@@ -828,7 +998,7 @@
     {
         XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "status")%>', null, function(x, status) {
         btn.disabled = true;
-        btn.value    = '<%:METACUBEXD%>';
+        btn.value    = '<%:Metacubexd Control Panel%>';
         if (status.daip && window.location.hostname == status.daip) {
             url9='<%="http://'+window.location.hostname+':'+status.cn_port+'/ui/metacubexd/#/setup?hostname='+ window.location.hostname + '&port=' + status.cn_port + '&secret=' + status.dase +'"%>';
         }
@@ -844,11 +1014,31 @@
         });
     };
 
+    function zashboard_dashboard(btn)
+    {
+        XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "status")%>', null, function(x, status) {
+        btn.disabled = true;
+        btn.value    = '<%:Metacubexd Control Panel%>';
+        if (status.daip && window.location.hostname == status.daip) {
+            url66='<%="http://'+window.location.hostname+':'+status.cn_port+'/ui/zashboard/#/setup?hostname='+ window.location.hostname + '&port=' + status.cn_port + '&secret=' + status.dase +'"%>';
+        }
+        else if (status.daip && window.location.hostname != status.daip && status.db_foward_domain && status.db_foward_port) {
+            var ui_proto = status.db_forward_ssl == 0 ? 'http://' : 'https://';
+            url66='<%="'+ui_proto+status.db_foward_domain+':'+status.db_foward_port+'/ui/zashboard/#/setup?hostname='+ status.db_foward_domain + '&port=' + status.db_foward_port + '&secret=' + status.dase +'"%>';
+        }
+        else {
+            url66='<%="http://'+window.location.hostname+':'+status.cn_port+'/ui/zashboard/#/"%>';
+        }
+        winOpen(url66);
+        return false;
+        });
+    };
+
 	function ycad_dashboard(btn)
     {
         XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "status")%>', null, function(x, status) {
         btn.disabled = true;
-        btn.value    = '<%:YACD PANEL%>';
+        btn.value    = '<%:Yacd Control Panel%>';
         if (status.daip && window.location.hostname == status.daip) {
             url1='<%="http://'+window.location.hostname+':'+status.cn_port+'/ui/yacd/?hostname='+ window.location.hostname + '&port=' + status.cn_port + '&secret=' + status.dase +'"%>';
         }
@@ -868,7 +1058,7 @@
     {
         XHR.get('<%=luci.dispatcher.build_url("admin", "services", "openclash", "status")%>', null, function(x, status) {
         btn.disabled = true;
-        btn.value    = '<%:DASHBOARD%>';
+        btn.value    = '<%:Dashboard Control Panel%>';
         if (status.daip && window.location.hostname == status.daip) {
             url2='<%="http://'+window.location.hostname+':'+status.cn_port+'/ui/dashboard/#/?host='+ window.location.hostname + '&port=' + status.cn_port + '&secret=' + status.dase +'"%>';
         }
@@ -980,7 +1170,6 @@
         });
 	};
 //]]></script>
-
 <script>
     fetch('http://ip-api.com/json')
         .then(response => response.json())
